# hyk

./: ;  AGENTS.md  Cargo.toml
.github/workflows/: rust.yml
shaders/: 2D_fragment_shader.frag  2D_fragment_shader.spv  2D_texture_fragment_shader.frag  2D_texture_fragment_shader.spv  fragment_shader.spvasm  scene_data_input.glsl  scene_data_mesh.frag  scene_data_mesh.frag.spv  scene_data_mesh.vert  scene_data_mesh.vert.spv
src/: app.rs  lib.rs  main.rs  renderer.rs
src/core/: buffers.rs  device.rs  egui_integration.rs  enums.rs  instance.rs  mod.rs  sampler.rs  shader_store.rs
src/core/geometry/: mod.rs  vertex3d.rs
src/core/model_pipeline/: mod.rs  render_pipeline.rs
src/core/model_pipeline/parser/: gltf_parser.rs  mod.rs  object_parser.rs
src/core/renderable/: identifier.rs  mod.rs
src/core/renderable/objects/: donut.rs  mod.rs
src/core/renderable/ui/: mod.rs  settings_menu.rs
src/core/resource_manager/: mod.rs
src/core/scene_manager/: mod.rs  render_pipeline.rs
src/core/scene_manager/parser/: gltf_parser.rs  mod.rs  object_parser.rs
src/core/ui/: mod.rs  settings_menu.rs
src/core/utils/: mod.rs  pipeline_attachments.rs  push_constants.rs  ranged.rs
