[package]
name = "hyk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
egui = "0.31.1"
egui-winit = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"]}
image = { version = "0.25", features = ["jpeg", "png"] } 
env_logger = "0.11.8"
glm = "0.2.3"
log = "0.4.27"
muda = "0.16.1"
pollster = "0.4.0"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = "1.45.1"
wgpu = { version="25.0.2", features=["spirv", "glsl", "vulkan", "vulkan-portability"]}
winit = "0.30.11"
mockall = "0.13.1"
